[project]
name = "task5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "notebook>=7.3.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
]
